tests/expectations/compiler/dyn_record/dyn_record_basic.out
Error [EPAR0370005]: expected 'record' -- found '{'
    --> compiler-test:8:38
     |
   8 |     fn make_dynamic(t: Token) -> dyn {
     |                                      ^
Error [EPAR0370005]: expected 'record' -- found ';'
    --> compiler-test:9:31
     |
   9 |         let dynamic = t as dyn;
     |                               ^
Error [EPAR0370005]: expected 'record' -- found ')'
    --> compiler-test:13:26
     |
  13 |     fn get_balance(r: dyn) -> u64 {
     |                          ^
Error [EPAR0370005]: expected 'record' -- found ')'
    --> compiler-test:18:24
     |
  18 |     fn get_owner(r: dyn) -> address {
     |                        ^
Error [EPAR0370005]: expected 'record' -- found ')'
    --> compiler-test:22:29
     |
  22 |     fn get_memo_typed(r: dyn) -> field {
     |                             ^
